--- a/desenho.tex
+++ b/desenho.tex
@@ -69,6 +69,7 @@
 \selectlanguage{brazil}
 \frenchspacing
 
+
 \imprimircapa
 \imprimirfolhaderosto*
 
@@ -80,6 +81,7 @@
 % ------------------------------------------------------------------------------
 % Coloquem aqui o include dos capitulos de voces
 % e o arquivo correspondente na pasta capitulos
+\include{capitulos/tecnologias_utilizadas}
 % ------------------------------------------------------------------------------
 % ------------------------------------------------------------------------------
 
