Corrigir referencia de exemplo de sigla

--- a/capitulos/arquitetura.tex
+++ b/capitulos/arquitetura.tex
@@ -35,12 +35,15 @@ arquitetura.
 \end{figure}
 
 A comunicação entre estes serviços será feita com o uso do protocolo
-\label{sig:http}HTTP, que permite a aplicação cliente realizar chamadas ao servidor
-através de urls, seja para buscar informações para apresentar ao
-usuário ou postar informações coletadas dele. O framework Spring, além
-de abstrair a implementação da lógica de um servidor, implementa
-\emph{listeners} para estas urls, auxiliando a criação de pontos na
-aplicação do servidor focados na comunicação com a aplicação cliente.
+\label{sig:https}\hyperlink{s:http}{HTTPS}, que permite a aplicação
+cliente realizar chamadas ao servidor através de urls, seja para
+buscar informações para apresentar ao usuário ou postar informações
+coletadas dele. O framework Spring, além de abstrair a implementação
+da lógica de um servidor, implementa \emph{listeners} para estas urls,
+auxiliando a criação de pontos na aplicação do servidor focados na
+comunicação com a aplicação cliente.
+
+
 
 %%% Local Variables:
 %%% mode: latex
