--- a/capitulos/siglas.tex
+++ b/capitulos/siglas.tex
@@ -1,6 +1,6 @@
 \begin{siglas}
-\item[HTTPS] Hypertext Transfer Protocol --- Protocolo seguro de
-  transferência de hypertexto, citado em \ref{sig:http}
+\item[HTTPS]\hypertarget{s:http}{Hypertext Transfer Protocol} --- Protocolo seguro de
+  transferência de hypertexto, citado em \ref{sig:https}
 \end{siglas}
 %%% Local Variables:
 %%% mode: latex
