--- a/capitulos/siglas.tex
+++ b/capitulos/siglas.tex
@@ -1,6 +1,13 @@
 \begin{siglas}
-\item[HTTPS]\hypertarget{s:http}{Hypertext Transfer Protocol} --- Protocolo seguro de
-  transferência de hypertexto, citado em \ref{sig:https}
+  \item[API]\hypertarget{s:API}{Application Programming Interface} ---
+    Interface de progragramação de Aplicação. Citado em \ref{sig:API}
+  \item[HTTPS]\hypertarget{s:http}{Hypertext Transfer Protocol} ---
+    Protocolo seguro de transferência de hypertexto. Citado em
+    \ref{sig:https}
+  \item[REST]\hypertarget{s:rest}Representational State Trasfer ---
+    Transferência de Representação deEstado: modelo de transferência
+    de dados no qual o estado de um objeto é serializado e transferido
+    entre aplicações. Citado em \ref{sig:rest}
 \end{siglas}
 %%% Local Variables:
 %%% mode: latex
