--- a/capitulos/arquitetura.tex
+++ b/capitulos/arquitetura.tex
@@ -27,9 +27,9 @@ Esta arquitetura é composta por duas aplicações distintas:
 Podemos ver na \autoref{fig:cli-srv} uma respresentação desta
 arquitetura.
 
-\begin{figure}
+\begin{figure}[h]
   \centering
-  \includegraphics[scale=0.5]{lixt}
+  \includegraphics[scale=0.4]{lixt}
   \caption{Arquitetura Lixt}
   \label{fig:cli-srv}
 \end{figure}
@@ -43,7 +43,21 @@ da lógica de um servidor, implementa \emph{listeners} para estas urls,
 auxiliando a criação de pontos na aplicação do servidor focados na
 comunicação com a aplicação cliente.
 
+O uso do protocolo HTTPS oferece alguamas vantagens a aplicação
+\emph{front-end}, que não precisa esperar uma solicitação ao
+\emph{back-end} ser finalizada antes de realizar outras solicitações,
+aumentando a repsonsividade da aplicação cliente. Para além disso,
+quando combinada ao modelo \label{sig:rest}\hyperlink{s:rest}{REST} na
+construção da \label{sig:API} \hyperlink{s:API}{API}, o protocolo HTTP
+oferece meios eficientes para que as aplicações se comuniquem.
 
+Como plataforma de servidor, o serviço AWS será utilizado, uma vez que
+é oferecida de maneira gratuita para a realização deste projeto, e nele
+serão armazenadas algumas instâncias da aplicação \emph{back-end}.
+Esta redundância é necessária como forma de garantir a estabilidade do
+sistema, de forma que sempre haja alguma disponível para o
+processamento de novas requisições, e, em caso de falha numa delas, o
+serviço não seja interrompido aos usuários.
 
 %%% Local Variables:
 %%% mode: latex
