--- a/capitulos/siglas.tex
+++ b/capitulos/siglas.tex
@@ -8,6 +8,10 @@
     Transferência de Representação deEstado: modelo de transferência
     de dados no qual o estado de um objeto é serializado e transferido
     entre aplicações. Citado em \ref{sig:rest}
+  \item[MVP]\hypertarget{s:mvp}{\textit{Minimum Viable Product}} --- 
+  	Mínimo Produto Viável. Citado em \ref{sig:mvp}
+  \item[LGPD]\hypertarget{s:lgpd}{Lei Geral de Proteção de Dados}. --- 
+  	Citado em \ref{sig:lgpd}
 \end{siglas}
 %%% Local Variables:
 %%% mode: latex
