Usar input no lugar de include

--- a/capitulos/desenvolvimento.tex
+++ b/capitulos/desenvolvimento.tex
@@ -7,16 +7,20 @@ arquitetura e a modelagem do produto.
 Isto é apresentado para que se possa estabelecer parâmetros e métricas
 que guiarão o desenvolvimento e a entrega final do projeto.
 
-\include{section/arquitetura}
+\input{capitulos/section/arquitetura}
 
-\include{section/escopo}
+\input{capitulos/section/escopo}
 
-\include{section/tecnologias}
+\input{capitulos/section/tecnologias}
 
-\include{section/escalabilidade}
+\input{capitulos/section/escalabilidade}
 
-\include{section/manutenibilidade}
+\input{capitulos/section/manutenibilidade}
 
-\include{section/segurança}
+\input{capitulos/section/segurança}
 
-\include{section/viabilidade}s
+\input{capitulos/section/viabilidade}
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../desenho"
+%%% End:
