--- a/capitulos/section/arquitetura.tex
+++ b/capitulos/section/arquitetura.tex
@@ -1,4 +1,5 @@
 \section{Arquitetura}
+
 Com base na análise do projeto, e nos requisitos que foram levantados
 como necessários, a arquitetura cliente-servidor é plausível como
 modelo para o produto que pretendemos entregar.
@@ -49,3 +50,8 @@ Esta redundância é necessária como forma de garantir a estabilidade do
 sistema, de forma que sempre haja alguma disponível para o
 processamento de novas requisições, e, em caso de falha numa delas, o
 serviço não seja interrompido aos usuários.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../../desenho"
+%%% End:
