Estudo de Viabilidade Financeira

--- a/desenho.tex
+++ b/desenho.tex
@@ -80,6 +80,8 @@
 
 \include{capitulos/arquitetura.tex}
 
+\include{capitulos/viabilidade_financeira.tex}
+
 % ------------------------------------------------------------------------------
 % ------------------------------------------------------------------------------
 % Coloquem aqui o include dos capitulos de voces
