🚚 movendo arquivo de tecnologias para estrutura nova e inserção de sigla

--- a/capitulos/siglas.tex
+++ b/capitulos/siglas.tex
@@ -8,6 +8,7 @@
     Transferência de Representação deEstado: modelo de transferência
     de dados no qual o estado de um objeto é serializado e transferido
     entre aplicações. Citado em \ref{sig:rest}
+   \item[ORM]\hypertarget{s:ORM}Object–relational mapping --- Mapeamento objeto-relacional. Citado em 		\ref{sig:ORM}
 \end{siglas}
 %%% Local Variables:
 %%% mode: latex
