💬 adição das tecnologias do controle de versão

--- a/capitulos/section/tecnologias.tex
+++ b/capitulos/section/tecnologias.tex
@@ -30,6 +30,10 @@ O banco de dados que escolhemos foi o MySQL pois precisávamos para a nossa prop
 Para o gerenciamento das tarefas optamos pela ferramenta Trello por ser gratuita, de fácil manuseio e visualização.
 Além disso, o Trello figura entre as ferramentas que foram utilizadas com sucesso nos semestres anteriores durante o desenvolvimento de projetos.
 
+\subsection{Versionamento}
+Para o controle de versão do desenvolvimento da aplicação optamos pelo Git com repositório no Github. Esta escolha foi realizada devido à experiência prévia da equipe com a ferramenta e pela quantidade de recursos oferecidos pela plataforma na gestão do desenvolvimento de aplicações.
+Para o versionamento do projeto utilizamos o Apache Subversion (SVN). Concentramos no repositório fornecido pelos professores todas as entregas previstas (incluindo as versões atualizadas dos códigos do repositório externo do Github).
+
 
 
 %%% Local Variables:
