Subsection: Manutenibiliadde (front-end)

--- a/capitulos/section/manutenibilidade.tex
+++ b/capitulos/section/manutenibilidade.tex
@@ -33,7 +33,11 @@ permite, a partir do código no repositório git, a execução de testes,
 o build e o \emph{deploy} para o ambiente de produção, automatizando tarefas
 complicadas de se executar em máquinas remotas.
 
-%% front-end ......
+Para o \emph{front-end}, no entanto, não existem ferramentas de
+integração contínua, uma vez que as imagens do aplicativo mobile
+precisam ser aprovadas pelas lojas de aplicativo. Contudo, ainda é
+possível usar ferramentas de CI para a execução de testes e
+verificação da integridade do código a cada nova versão.
 
 \subsection{\emph{Code Conventions}}
 
