Part: Glossario (1 entrada)

--- a/capitulos/section/arquitetura.tex
+++ b/capitulos/section/arquitetura.tex
@@ -40,7 +40,7 @@ O uso do protocolo HTTPS oferece alguamas vantagens a aplicação
 \emph{back-end} ser finalizada antes de realizar outras solicitações,
 aumentando a repsonsividade da aplicação cliente. Para além disso,
 quando combinada ao modelo \label{sig:rest}\hyperlink{s:rest}{REST} na
-construção da \label{sig:API} \hyperlink{s:API}{API}, o protocolo HTTP
+construção da \label{sig:API}\gls{API}, o protocolo HTTP
 oferece meios eficientes para que as aplicações se comuniquem.
 
 Como plataforma de servidor, o serviço AWS será utilizado, uma vez que
