Glossario: incluir termos e ajustar sec:arquitetura

--- a/capitulos/glossario.tex
+++ b/capitulos/glossario.tex
@@ -5,6 +5,33 @@
     aplicação expoõe para permitir que usuários ou serviços externos
     executem tarefas dentro da aplicação.}
 }
+
+\newglossaryentry{frontend}{
+  name={front-end},
+  description={Um sistema \emph{front-end} é aquele que encontra na
+    camada cliente, em uma aplicação de duas camadas. Sua
+    principal função, no escopo deste projeto, é atuar como interface
+    gráfica para o usário, coletar dados e enviá-los par o \emph{back-end}.
+  }
+}
+
+\newglossaryentry{backend}{
+  name={back-end},
+  description={Um sistema \emph{back-end} é aquele que encontra na
+    camada de servidor, em uma aplicação de duas camadas. Sua
+    principal função é fornecer informações e capacidade de
+    processamento a aplicação cliente.
+  }
+}
+
+
+\newglossaryentry{REST}{
+  name={REST},
+  description={A Tranfêrencia por Representação de Estado é uma forma
+    de se transferir dados na qual os atirbutos de um objeto (seu
+    estado) são serializados em um arquivo de formato específico, e
+    o objeto pode ser reconstituído na aplicação que recebe o arquivo.}
+}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../desenho"
