--- a/desenho.tex
+++ b/desenho.tex
@@ -26,7 +26,7 @@
 \usepackage{graphicx}
 \usepackage{microtype}
 \usepackage{datatool}
-\usepackage{glossaries}
+\usepackage[nopostdot]{glossaries}
 
 \usepackage[brazilian,hyperpageref]{backref}
 \usepackage[alf]{abntex2cite}
