--- a/capitulos/section/escalabilidade.tex
+++ b/capitulos/section/escalabilidade.tex
@@ -7,13 +7,13 @@ adequadamente nestes momentos, assim como liberar seus recursos em
 momentos com poucas requisições.
 
 Por se tratar de algo relativo ao processamento de requisições, a
-escalabilidade diz respeito ao \emph{back-end}, que centraliza os
+escalabilidade diz respeito ao \gls{backend}, que centraliza os
 pedidos dos usúarios. A camada cliente por outro lado, por focar
 exclusivamente na lógica de visualização, e rodar em dispositivos
 mobile, não exige tanta capacidade de processamento, e a
 escalabilidade não é uma preocupação para esta camada.
 
-Como foi mencionado, a aplicação \emph{back-end} ficará armazenada na
+Como foi mencionado, a aplicação \gls{backend} ficará armazenada na
 plataforma Amazon AWS. Existe um processo da ferramenta de integração
 contínua Jenkins para aumentar o número de instâncias ativas em
 produção, e este processo será acionado em momentos com intenso volume
