Sec:manutenibiliade, typo

--- a/capitulos/section/manutenibilidade.tex
+++ b/capitulos/section/manutenibilidade.tex
@@ -1,4 +1,4 @@
-\section{Mantenibilidade da aplicação}
+\section{Manutenibilidade da aplicação}
 
 É fundamental para o desenvolvimento do projeto, tanto o previsto
 quanto em avanços posteriores, que a aplicação atinja um nível adequado
