Sec:manutenibilidade, add glossario e referencias

--- a/capitulos/glossario.tex
+++ b/capitulos/glossario.tex
@@ -6,6 +6,12 @@
     executem tarefas dentro da aplicação.}
 }
 
+\newglossaryentry{deploy}{
+  name={deploy},
+  description={Processo pelo qual a aplicação é implantada em ambiente
+  de prpdução, e está disponível para os usuários finais.}
+}
+
 \newglossaryentry{frontend}{
   name={front-end},
   description={Um sistema \emph{front-end} é aquele que encontra na
@@ -13,6 +19,13 @@
     principal função, no escopo deste projeto, é atuar como interface
     gráfica para o usário, coletar dados e enviá-los par o \emph{back-end}.
   }
+}
+
+\newglossaryentry{GUI}{
+  name={GUI},
+  description={Interface gráfica de usuário é uma forma visual de se
+    apresentar dados e coletar interações com o usuário, em oposição a
+    linha de comando, que funciona por texto apenas.}
 }
 
 \newglossaryentry{backend}{
