Sec:tecnologias/arquitetura add itens ao glossario

--- a/capitulos/glossario.tex
+++ b/capitulos/glossario.tex
@@ -45,6 +45,17 @@
     estado) são serializados em um arquivo de formato específico, e
     o objeto pode ser reconstituído na aplicação que recebe o arquivo.}
 }
+
+\newglossaryentry{framework}{
+  name={framework},
+  description={Um conjunto de pacotes e bibliotecas que abstarai
+    alguma função complexa, geralmente de nível mais baixo, e sobre o
+    qual uma aplicação pdoe ser contruída. Ex: o framework web Spring
+    asbtrai a lógica de implementação de um servidor, auxiliando a
+    criação de endpoints, rotas e processamento de HTTP.}
+}
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../desenho"
