--- a/capitulos/section/arquitetura.tex
+++ b/capitulos/section/arquitetura.tex
@@ -7,13 +7,13 @@ Esta arquitetura é composta por duas aplicações distintas:
 \begin{itemize}
 \item Uma aplicação \gls{frontend}, focada na interação com o usúario
   e apresentação de dados de uma forma agradável e intuitiva. Esta
-  aplicação será implementada em JavaScript, com o framework React
+  aplicação será implementada em JavaScript, com o \gls{framework} React
   Native, e disponibilizada para as plataformas iOS e Android.
 \item Uma aplicação \gls{backend}, que será responsável por tratar os
   dados coletados no \gls{frontend} e disponibilizar as informações
   que serão mostradas aos usuários. Como esta aplicação requer uma
   lógica de servidor, estabilidade e ampla disponiblidade, esta
-  aplicação será implementada em Java, com uso do framework Spring
+  aplicação será implementada em Java, com uso do \gls{framework} Spring
   Boot, que abstrai a criação de um servidor.
 \end{itemize}
 Podemos ver na \autoref{fig:cli-srv} uma respresentação desta
@@ -30,7 +30,7 @@ A comunicação entre estes serviços será feita com o uso do protocolo
 \label{sig:https}\hyperlink{s:http}{HTTPS}, que permite a aplicação
 cliente realizar chamadas ao servidor através de urls, seja para
 buscar informações para apresentar ao usuário ou postar informações
-coletadas dele. O framework Spring, além de abstrair a implementação
+coletadas dele. O \gls{\gls{framework}} Spring, além de abstrair a implementação
 da lógica de um servidor, implementa \emph{listeners} para estas urls,
 auxiliando a criação de pontos na aplicação do servidor focados na
 comunicação com a aplicação cliente.
