--- a/capitulos/section/tecnologias.tex
+++ b/capitulos/section/tecnologias.tex
@@ -7,7 +7,7 @@ Dito isso, escolhemos as seguintes tecnologias:
 
 \subsubsection{Back-end}
 
-Decidimos que a linguagem para o back-end seria o Java. A linguagem se adequa à nossa proposta e atende o paradigma de linguagem orientada a objetos do qual nos foi orientado a utilizar. 
+Decidimos que a linguagem para o \gls{backend} seria o Java. A linguagem se adequa à nossa proposta e atende o paradigma de linguagem orientada a objetos do qual nos foi orientado a utilizar. 
 A comunidade de Java é extensa e ativa, contribuindo com muitos materiais e recursos. Ainda podemos destacar que a utilização da linguagem previamente pelos integrantes da equipe também foi impactante na consolidação dessa decisão.
 
 \subsubsection{Mobile}
@@ -17,11 +17,11 @@ Para o desenvolvimento da plataforma mobile decidimos utilizar o Javascript. A l
 
 \subsubsection{Back-end}
 
-Para o back-end decidimos utilizar o framework Spring, usando a ferramenta Spring Boot que proporciona agilidade na criação das aplicações pois segue a filosofia de Convention over Configuration\cite{Devopedia2020}, nos poupando de depreender muito tempo nas configurações. Não obstante, a framework facilita o desenvolvimento pois nos propicia a utilização de módulos que julgarmos necessários (como Spring MVC e Spring Data JDBC). Além disso, há uma gama vasta de materiais para consultarmos.
+Para o \gls{backend} decidimos utilizar o \gls{framework} Spring, usando a ferramenta Spring Boot que proporciona agilidade na criação das aplicações pois segue a filosofia de Convention over Configuration\cite{Devopedia2020}, nos poupando de depreender muito tempo nas configurações. Não obstante, a \gls{framework} facilita o desenvolvimento pois nos propicia a utilização de módulos que julgarmos necessários (como Spring MVC e Spring Data JDBC). Além disso, há uma gama vasta de materiais para consultarmos.
 Como ferramenta \label{sig:ORM}\hyperlink{s:ORM}{ORM} decidimos usar o Hibernate pela consolidação dele no mercado e o uso amplo em aplicações Java que necessitam de mapeamento relacional dos dados. Por conta da quantidade de modelos da aplicação, julgamos necessário utilizar uma ferramenta que facilitasse esse processo. 
 
 \subsubsection{Mobile}
-Na aplicação mobile decidimos utilizar o framework React-Native. Esta framework gera aplicativos nativos, não necessita de muitos recursos e configurações para montar o ambiente de desenvolvimento e possibilita um conforto maior no desenvolvimento do código por ser uma framework Javascript. Não obstante, também é uma framework com larga quantidade de recursos para consulta além de uma comunidade muito ativa.
+Na aplicação mobile decidimos utilizar o \gls{framework} React-Native. Esta \gls{framework} gera aplicativos nativos, não necessita de muitos recursos e configurações para montar o ambiente de desenvolvimento e possibilita um conforto maior no desenvolvimento do código por ser uma \gls{framework} Javascript. Não obstante, também é uma \gls{framework} com larga quantidade de recursos para consulta além de uma comunidade muito ativa.
 
 \subsection{Banco de dados}
 O banco de dados que escolhemos foi o MySQL pois precisávamos para a nossa proposta de um banco de dados relacional e que fosse possível de ser hospedado na AWS. Verificamos que o MySQL cobria não apenas esses critérios mas também possui uma ferramenta gráfica (MySQL Workbench) que facilita a visualização e a operação do banco. Além disso os integrantes da equipe já tiveram experiências com a ferramenta anteriormente.
