adição arquivos de gerenciamento do projeto

--- a/desenho.tex
+++ b/desenho.tex
@@ -86,6 +86,8 @@
 
 \input{capitulos/desenvolvimento.tex}
 
+\input{capitulos/gerenciamento.tex}
+
 % ------------------------------------------------------------------------------
 % ------------------------------------------------------------------------------
 % Coloquem aqui o include dos capitulos de voces
